tests/trybuild/indices_ordered/needs_to_provide_indices_comma.stderr
error: unexpected end of macro invocation
 --> tests/trybuild/indices_ordered/needs_to_provide_indices_comma.rs:6:41
  |
6 |     let result = indices_ordered!(slice,);
  |                                         ^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$index1:expr`
 --> src/lib.rs
  |
  |     ($slice:expr, $index1:expr) => {{
  |                   ^^^^^^^^^^^^
